--- a/src/app/components/txs/txs.component.html
+++ b/src/app/components/txs/txs.component.html
@@ -92,12 +92,14 @@
               <ul class="list-group">
                 <span *ngFor="let action of tx.action; index as i">
                   <li class="list-group-item d-flex justify-content-between align-items-center">
-                      Type:
-                      <span class="badge badge-primary badge-pill">{{ action | titlecase}}</span>
-                    </li>
+                    Type:
+                    <span class="badge badge-primary badge-pill">{{ action | titlecase}}</span>
+                  </li>
                   <li *ngIf="tx.sender && tx.sender[i]" class="list-group-item d-flex justify-content-between align-items-center">
                     From:
-                    <span class="badge badge-primary badge-pill">
+                    <span class="badge badge-primary badge-pill"
+                          style="cursor:pointer;" 
+                          (click)="openTxsListDialog(tx.sender[i])">
                       <span *ngIf="(appState | async).valsMap.size ? (appState | async).valsMap.has( tx.sender[i] ) : false; else elseSender">
                         {{ (appState | async).valsMap.get( tx.sender[i] )}}
                       </span>
@@ -106,7 +108,9 @@
                   </li>
                   <li *ngIf="tx.recipient && tx.recipient[i]" class="list-group-item d-flex justify-content-between align-items-center">
                     To:
-                    <span class="badge badge-primary badge-pill">
+                    <span class="badge badge-primary badge-pill"
+                          style="cursor:pointer;" 
+                          (click)="openTxsListDialog(tx.recipient[i])">
                         <span *ngIf="(appState | async).valsMap.size ? (appState | async).valsMap.has( tx.recipient[i] ) : false; else elseRecipient">
                           {{ (appState | async).valsMap.get( tx.recipient[i] )}}
                         </span>
@@ -115,7 +119,9 @@
                   </li>
                   <li *ngIf="tx.delegator && tx.delegator[i]" class="list-group-item d-flex justify-content-between align-items-center">
                     Delegator:
-                    <span style="cursor:pointer;" (click)="openTxsListDialog(tx.delegator[i])" class="badge badge-primary badge-pill">
+                    <span style="cursor:pointer;" 
+                          (click)="openTxsListDialog(tx.delegator[i])" 
+                          class="badge badge-primary badge-pill">
                       <span *ngIf="(appState | async).valsMap.size ? (appState | async).valsMap.has( tx.delegator[i] ) : false; else elseDelegator">
                         {{ (appState | async).valsMap.get( tx.delegator[i] )}}
                       </span>
@@ -124,7 +130,9 @@
                   </li>
                   <li *ngIf="tx.source_validator && tx.source_validator[i]" class="list-group-item d-flex justify-content-between align-items-center">
                     Validator:
-                    <span class="badge badge-primary badge-pill">
+                    <span class="badge badge-primary badge-pill"
+                          (click)="openValidatorDetailDialog(tx.source_validator[i])"
+                          style="cursor: pointer">
                       <span *ngIf="(appState | async).valsMap.size ? (appState | async).valsMap.has( tx.source_validator[i] ) : false; else elseSourceVal">
                         {{ (appState | async).valsMap.get( tx.source_validator[i] )}}
                       </span>
@@ -133,7 +141,9 @@
                   </li>
                   <li *ngIf="tx.destination_validator && tx.destination_validator[i]" class="list-group-item d-flex justify-content-between align-items-center">
                     Validator:
-                    <span class="badge badge-primary badge-pill">
+                    <span class="badge badge-primary badge-pill"
+                          (click)="openValidatorDetailDialog(tx.destination_validator[i])"
+                          style="cursor: pointer">
                       <span *ngIf="(appState | async).valsMap.size ? (appState | async).valsMap.has( tx.destination_validator[i] ) : false; else elseDestVal">
                         {{ (appState | async).valsMap.get( tx.destination_validator[i] )}}
                       </span>
