--- a/src/app/components/governance/governance.component.html
+++ b/src/app/components/governance/governance.component.html
@@ -1,5 +1,5 @@
 <app-chart-cards-gov *ngIf="proposals" [proposals]="proposals.slice(-3)"></app-chart-cards-gov>
-<div class="row scrollbar-primary table-responsive text-nowrap">
+<div class="row scrollbar-primary mat-elevation-z8 table-responsive text-nowrap">
   <table mat-table multiTemplateDataRows [dataSource]="dataSource" class="mat-elevation-z8 w-auto">
     
     <ng-container matColumnDef="id">
