--- a/src/styles.scss
+++ b/src/styles.scss
@@ -208,7 +208,7 @@ article {
 
 .subtitle {
   font-weight: 400;
-  color:#FFC107;
+  color:#FF4081;
 }
 
 
@@ -218,7 +218,7 @@ article {
 }
 
 .header-subtitle {
- color: #FFC107
+ color: #FF4081;
 }
 
 .card .content {
