--- a/src/app/components/governance/gov-detail/gov-detail.component.scss
+++ b/src/app/components/governance/gov-detail/gov-detail.component.scss
@@ -1,3 +1,7 @@
+section {
+    margin-top: 50px;
+}
+
 .main-row {
     max-width: 1200px;
     margin:0 auto;
@@ -40,4 +44,10 @@ li {
     .view {
         box-shadow: 0 3px 10px 0 rgba(0, 0, 0, 0.15), 0 3px 12px 0 rgba(0, 0, 0, 0.15);
     }
+}
+
+.card-title {
+    margin: 0;
+    font-size: 130%;
+    font-weight: bold;
 }
