--- a/src/app/components/tx/tx.component.html
+++ b/src/app/components/tx/tx.component.html
@@ -112,7 +112,9 @@
                 </li>
                 <li *ngIf="tx.source_validator && tx.source_validator[i]" class="list-group-item d-flex justify-content-between align-items-center">
                   Validator:
-                  <span class="badge badge-primary badge-pill">
+                  <span class="badge badge-primary badge-pill"
+                        (click)="openValidatorDetailDialog(tx.source_validator[i])"
+                        style="cursor: pointer">
                     <span *ngIf="(appState | async).valsMap.size ? (appState | async).valsMap.has( tx.source_validator[i] ) : false; else elseSourceVal">
                       {{ (appState | async).valsMap.get( tx.source_validator[i] )}}
                     </span>
@@ -121,7 +123,9 @@
                 </li>
                 <li *ngIf="tx.destination_validator && tx.destination_validator[i]" class="list-group-item d-flex justify-content-between align-items-center">
                   Validator:
-                  <span class="badge badge-primary badge-pill">
+                  <span class="badge badge-primary badge-pill"
+                        (click)="openValidatorDetailDialog(tx.destination_validator[i])"
+                        style="cursor: pointer">
                     <span *ngIf="(appState | async).valsMap.size ? (appState | async).valsMap.has( tx.destination_validator[i] ) : false; else elseDestVal">
                       {{ (appState | async).valsMap.get( tx.destination_validator[i] )}}
                     </span>
