Block proposer to validator popup logic added

--- a/src/app/components/block/block.component.html
+++ b/src/app/components/block/block.component.html
@@ -13,7 +13,8 @@
                     </li>
                     <li class="list-group-item d-flex justify-content-between align-items-center">
                         Proposer
-                        <span class="badge badge-primary badge-pill">
+                        <span class="badge badge-primary badge-pill"
+                              (click)="openValidatorDetailDialogHEX(block.proposer)">
                           <span *ngIf="(appState | async).valsMap.size 
                                   ? (appState | async).valsMap.has(block.proposer) 
                                   : false; else elseBlockProposer">
