--- a/src/app/components/block/block.component.html
+++ b/src/app/components/block/block.component.html
@@ -14,6 +14,7 @@
                     <li class="list-group-item d-flex justify-content-between align-items-center">
                         Proposer
                         <span class="badge badge-primary badge-pill"
+                              style="cursor: pointer;"
                               (click)="openValidatorDetailDialogHEX(block.proposer)">
                           <span *ngIf="(appState | async).valsMap.size 
                                   ? (appState | async).valsMap.has(block.proposer) 
