--- a/src/app/components/blocks/blocks.component.html
+++ b/src/app/components/blocks/blocks.component.html
@@ -46,7 +46,7 @@
           <ng-container matColumnDef="timestamp">
             <th mat-header-cell *matHeaderCellDef class="th-lg"><i class="ion-clock"></i>&nbsp;Timestamp</th>
             <td mat-cell *matCellDef="let block">  
-              {{block.time | timeAgo }}
+              {{block.time | ago | async }}
             </td>
           </ng-container>
         
