--- a/src/app/components/txs/txs.component.html
+++ b/src/app/components/txs/txs.component.html
@@ -63,8 +63,8 @@
         <th mat-header-cell *matHeaderCellDef class="th-lg"><i class="ion-card"></i>&nbsp;Fee</th>
         <td mat-cell *matCellDef="let tx"> 
           {{ 
-            tx.details?.tx.value.fee.amount ?
-            tx.details.tx.value.fee.amount[0].amount : '0' 
+            tx.fee?.amount ?
+            tx.fee.amount[0].amount : '0' 
           }}&nbsp;<span class="ticker">uatom</span> 
         </td>
       </ng-container>
@@ -92,7 +92,49 @@
             <div class="row">
               <ul class="list-group">
                 <span *ngFor="let action of tx.action; index as i">
-                  <li class="list-group-item d-flex justify-content-between align-items-center">
+                  <li *ngIf="tx.msg[i].type === 'cosmos-sdk/MsgSend'">
+                    {{ tx.msg[i].value.from_address }} send
+                    <span *ngIf="tx.msg[i].value.amount">
+                      {{ tx.msg[i].value.amount[0].amount }}
+                      {{ tx.msg[i].value.amount[0].denom }} 
+                    </span>
+                    to 
+                    <br>
+                    {{ tx.msg[i].value.to_address }}
+                  </li>
+                  <li *ngIf="tx.msg[i].type === 'cosmos-sdk/MsgDelegate'">
+                    {{ tx.msg[i].value.delegator_address }} delegate 
+                    <span *ngIf="tx.msg[i].value.amount">
+                      {{ tx.msg[i].value.amount.amount }}
+                      {{ tx.msg[i].value.amount.denom }} 
+                    </span>
+                    to
+                    <br>
+                    {{ tx.msg[i].value.validator_address }}
+                  </li>
+                  <li *ngIf="tx.msg[i].type === 'cosmos-sdk/MsgMultiSend'">
+                    <span *ngFor="let input of tx.msg[i].value.inputs">
+                      {{ input.address }} sent {{ input.coins[0].amount }} {{ input.coins[0].denom }}
+                    </span>
+                    <br>
+                    <span *ngFor="let output of tx.msg[i].value.outputs">
+                      {{ output.address }} recieved {{ output.coins[0].amount }} {{ output.coins[0].denom }}
+                    </span>
+                  </li>
+                  <li *ngIf="tx.msg[i].type === 'cosmos-sdk/MsgWithdrawDelegationReward'">
+                    {{ tx.msg[i].value.delegator_address }} 
+                    withdraw reward 
+                    <br>
+                    form
+                    {{ tx.msg[i].value.validator_address }}
+                  </li>
+                  <li *ngIf="tx.msg[i].type === 'cosmos-sdk/MsgWithdrawValidatorCommission'">
+                    {{ tx.msg[i].value.validator_address }}
+                    withdraw comission
+                  </li>  
+                </span>
+
+                  <!-- <li class="list-group-item d-flex justify-content-between align-items-center">
                     Type:
                     <span class="badge badge-primary badge-pill">{{ action | titlecase}}</span>
                   </li>
@@ -171,12 +213,7 @@
                     </li>
                   </span>
                   <br>
-                </span>
-                <!-- TODO add -->
-                <!-- <li class="list-group-item d-flex justify-content-between align-items-center">
-                  Amount:
-                  <span class="badge badge-primary badge-pill">{{tx.gasUsed}}</span>
-                </li> -->
+                </span> -->
                 <li *ngIf="tx.error" class="list-group-item d-flex justify-content-between align-items-center">
                   Status:
                   <span class="badge badge-primary badge-pill">{{tx.error|titlecase}}</span>
@@ -185,11 +222,10 @@
                   Gas (used/wanted):
                   <span class="badge badge-primary badge-pill">{{tx.gasUsed}}/{{tx.gasWanted}}</span>
                 </li>
-                <!-- TODO add -->
-                <!-- <li class="list-group-item d-flex justify-content-between align-items-center">
+                <li *ngIf="tx.memo?.length > 0" class="list-group-item d-flex justify-content-between align-items-center">
                   Memo:
-                  <span class="badge badge-primary badge-pill">wtf is up G!</span>
-                </li> -->
+                  <span class="badge badge-primary badge-pill">{{ tx.memo }}</span>
+                </li>
                 <li class="list-group-item d-flex justify-content-between align-items-center">
                   <span 
                       style="cursor: pointer;" 
@@ -198,6 +234,7 @@
                     Details
                   </span>
                 </li>
+                
               </ul>
             </div>
           </div>
