--- a/src/app/components/txs/txs.component.scss
+++ b/src/app/components/txs/txs.component.scss
@@ -162,3 +162,22 @@ color: #F44336;/*#00796b;*/
   margin: 20px auto 20px auto;
 }
 
+mdb-card {
+  max-width: 100%;
+}
+
+.tx-detail {
+  padding: 0 !important
+}
+
+mdb-badge {
+  margin-left: 0 !important
+}
+
+.txn-amount {
+  color: #3F51B5;
+}
+
+button {
+  margin-left: 0;
+}
