--- a/src/app/components/txs/txs.component.html
+++ b/src/app/components/txs/txs.component.html
@@ -83,71 +83,214 @@
         <td mat-cell *matCellDef="let tx" [attr.colspan]="displayedColumns.length" class="tx-detail">
           <div
               [@detailExpand]="tx == expandedElement ? 'expanded' : 'collapsed'">
-            <!-- <span>
-              <div *ngFor="let tag of tx.tags">
-                {{tag.key | titlecase}}: {{tag.value}}
-              </div>
-            </span> -->
-
               <mdb-card class="text-left mb-3" bgColor="bg-light">
                 <mdb-card-body>
                   <mdb-card-text class="text-left">
                     <span *ngFor="let action of tx.action; index as i">
 
                       <span *ngIf="tx.msg[i].type === 'cosmos-sdk/MsgSend'">
-                        <a href="#">{{ tx.msg[i].value.from_address }}</a><br>
-                          <mdb-badge default="true">sent</mdb-badge>&nbsp;
-                          <span *ngIf="tx.msg[i].value.amount">
-                            <span class="txn-amount">{{ tx.msg[i].value.amount[0].amount/1e6 | number:".2-2" }}&nbsp;ATOM</span>
-                            <!-- {{ tx.msg[i].value.amount[0].denom }}  -->
+                        <a (click)="openTxsListDialog( tx.msg[i].value.from_address )"> 
+                          <span *ngIf="(appState | async).valsMap.size 
+                                        ? (appState | async).valsMap.has( tx.msg[i].value.from_address ) 
+                                        : false; else elseFromSend">
+                            {{ (appState | async).valsMap.get( tx.msg[i].value.from_address )}}
                           </span>
-                          to 
-                          <br>
-                        <a href="#">{{ tx.msg[i].value.to_address }}</a>                            
+                          <ng-template #elseFromSend>{{ tx.msg[i].value.from_address }}</ng-template>
+                        </a>
+                        <br>
+                        <mdb-badge default="true">sent</mdb-badge>&nbsp;
+                        <span *ngIf="tx.msg[i].value.amount">
+                          <span class="txn-amount">{{ tx.msg[i].value.amount[0].amount/1e6 | number:".2-2" }}&nbsp;ATOM</span>
+                          <!-- {{ tx.msg[i].value.amount[0].denom }}  -->
+                        </span>
+                        to 
+                        <br>
+                        <a (click)="openTxsListDialog( tx.msg[i].value.to_address )"> 
+                          <span *ngIf="(appState | async).valsMap.size 
+                                        ? (appState | async).valsMap.has( tx.msg[i].value.to_address ) 
+                                        : false; else elseToSend">
+                            {{ (appState | async).valsMap.get( tx.msg[i].value.to_address )}}
+                          </span>
+                          <ng-template #elseToSend>{{ tx.msg[i].value.to_address }}</ng-template>
+                        </a>                          
                       </span>
 
-                      <span *ngIf="tx.msg[i].type === 'cosmos-sdk/MsgDelegate'">
-                        <a href="#">{{ tx.msg[i].value.delegator_address }}</a><br>
+                      <span *ngIf="tx.msg[i].type === 'cosmos-sdk/MsgDelegate' 
+                            || tx.msg[i].type === 'cosmos-sdk/MsgUndelegate'">
+                        <a (click)="openTxsListDialog( tx.msg[i].value.delegator_address )"> 
+                          <span *ngIf="(appState | async).valsMap.size 
+                                        ? (appState | async).valsMap.has( tx.msg[i].value.delegator_address ) 
+                                        : false; else elseDelegatorDelegate">
+                            {{ (appState | async).valsMap.get( tx.msg[i].value.delegator_address )}}
+                          </span>
+                          <ng-template #elseDelegatorDelegate>{{ tx.msg[i].value.delegator_address }}</ng-template>
+                        </a>                          
+                        <br>
+                        <span *ngIf="tx.msg[i].type === 'cosmos-sdk/MsgDelegate'; else elseDelegateBlock">
                           <mdb-badge default="true">delegated</mdb-badge>&nbsp;
                           <span *ngIf="tx.msg[i].value.amount">
                             <span class="txn-amount">{{ tx.msg[i].value.amount.amount/1e6 | number:".2-2" }}&nbsp;ATOM</span>
                           </span>
                           to 
-                          <br>
-                        <a href="#">{{ tx.msg[i].value.validator_address }}</a>                            
+                        </span>
+                        <ng-template #elseDelegateBlock>
+                          <mdb-badge default="true">undelegated</mdb-badge>&nbsp;
+                          <span *ngIf="tx.msg[i].value.amount">
+                            <span class="txn-amount">{{ tx.msg[i].value.amount.amount/1e6 | number:".2-2" }}&nbsp;ATOM</span>
+                          </span>
+                          from 
+                        </ng-template>
+                        <br>
+                        <a (click)="openValidatorDetailDialog( tx.msg[i].value.validator_address )"> 
+                          <span *ngIf="(appState | async).valsMap.size 
+                                        ? (appState | async).valsMap.has( tx.msg[i].value.validator_address ) 
+                                        : false; else elseValidatorDelegate">
+                            {{ (appState | async).valsMap.get( tx.msg[i].value.validator_address )}}
+                          </span>
+                          <ng-template #elseValidatorDelegate>{{ tx.msg[i].value.validator_address }}</ng-template>
+                        </a>                                              
                       </span>
 
                       <span *ngIf="tx.msg[i].type === 'cosmos-sdk/MsgMultiSend'">
                         <span *ngFor="let input of tx.msg[i].value.inputs">
-                            <a href="#">{{ input.address }}</a><br>
-                            <mdb-badge default="true">sent</mdb-badge>&nbsp;
-                            <span class="txn-amount">{{ input.coins[0].amount/1e6 | number:".2-2" }}&nbsp;ATOM</span>
+                          <a (click)="openTxsListDialog( input.address )"> 
+                            <span *ngIf="(appState | async).valsMap.size 
+                                          ? (appState | async).valsMap.has( input.address ) 
+                                          : false; else elseInputMulti">
+                              {{ (appState | async).valsMap.get( input.address )}}
+                            </span>
+                            <ng-template #elseInputMulti>{{ input.address }}</ng-template>
+                          </a>                          
+                          <br>
+                          <mdb-badge default="true">sent</mdb-badge>&nbsp;
+                          <span class="txn-amount">{{ input.coins[0].amount/1e6 | number:".2-2" }}&nbsp;ATOM</span>
                         </span>
                         to
                         <br>
                         <span *ngFor="let output of tx.msg[i].value.outputs">
-                            <a href="#">{{ output.address }}</a>&nbsp;
-                            <!-- <mdb-badge default="true">sent</mdb-badge>&nbsp;{{ output.coins[0].amount/1e6 | number:".2-2" }}&nbsp;ATOM -->
+                          <a (click)="openTxsListDialog( output.address )"> 
+                            <span *ngIf="(appState | async).valsMap.size 
+                                          ? (appState | async).valsMap.has( output.address ) 
+                                          : false; else elseOutputMulti">
+                              {{ (appState | async).valsMap.get( output.address )}}
+                            </span>
+                            <ng-template #elseOutputMulti>{{ output.address }}</ng-template>
+                          </a>
+                          <!-- <mdb-badge default="true">sent</mdb-badge>&nbsp;{{ output.coins[0].amount/1e6 | number:".2-2" }}&nbsp;ATOM -->
                         </span>                      
                       </span>
 
                       <span *ngIf="tx.msg[i].type === 'cosmos-sdk/MsgWithdrawDelegationReward'">
-                        <a href="#">{{ tx.msg[i].value.delegator_address }}</a><br>
-                          <mdb-badge default="true">withdrew rewards</mdb-badge>&nbsp;
-                          from 
-                          <br>
-                        <a href="#">{{ tx.msg[i].value.validator_address }}</a><br><hr>                            
+                        <a (click)="openTxsListDialog( tx.msg[i].value.delegator_address )"> 
+                          <span *ngIf="(appState | async).valsMap.size 
+                                        ? (appState | async).valsMap.has( tx.msg[i].value.delegator_address ) 
+                                        : false; else elseDelegatorWithdraw">
+                            {{ (appState | async).valsMap.get( tx.msg[i].value.delegator_address )}}
+                          </span>
+                          <ng-template #elseDelegatorWithdraw>{{ tx.msg[i].value.delegator_address }}</ng-template>
+                        </a> 
+                        <mdb-badge default="true">withdrew rewards</mdb-badge>&nbsp;
+                        from 
+                        <br>
+                        <a (click)="openValidatorDetailDialog( tx.msg[i].value.validator_address )"> 
+                          <span *ngIf="(appState | async).valsMap.size 
+                                        ? (appState | async).valsMap.has( tx.msg[i].value.validator_address ) 
+                                        : false; else elseValidatorWithdraw">
+                            {{ (appState | async).valsMap.get( tx.msg[i].value.validator_address )}}
+                          </span>
+                          <ng-template #elseValidatorWithdraw>{{ tx.msg[i].value.validator_address }}</ng-template>
+                        </a>    
+                        <br>
+                        <hr>                            
+                      </span>
+
+                      <span *ngIf="tx.msg[i].type === 'cosmos-sdk/MsgBeginRedelegate'">
+                        <a (click)="openTxsListDialog( tx.msg[i].value.delegator_address )"> 
+                          <span *ngIf="(appState | async).valsMap.size 
+                                        ? (appState | async).valsMap.has( tx.msg[i].value.delegator_address ) 
+                                        : false; else elseDelegatorRedelegate">
+                            {{ (appState | async).valsMap.get( tx.msg[i].value.delegator_address )}}
+                          </span>
+                          <ng-template #elseDelegatorRedelegate>{{ tx.msg[i].value.delegator_address }}</ng-template>
+                        </a>
+                        <br> 
+                        <mdb-badge default="true">redelegated</mdb-badge>&nbsp;
+                        <span *ngIf="tx.msg[i].value.amount">
+                          <span class="txn-amount">{{ tx.msg[i].value.amount.amount/1e6 | number:".2-2" }}&nbsp;ATOM</span>
+                        </span>
+                        from 
+                        <br>
+                        <a (click)="openValidatorDetailDialog( tx.msg[i].value.validator_src_address )"> 
+                          <span *ngIf="(appState | async).valsMap.size 
+                                        ? (appState | async).valsMap.has( tx.msg[i].value.validator_src_address ) 
+                                        : false; else elseSrcValidatorRedelegate">
+                            {{ (appState | async).valsMap.get( tx.msg[i].value.validator_src_address )}}
+                          </span>
+                          <ng-template #elseSrcValidatorRedelegate>
+                            {{ tx.msg[i].value.validator_src_address }}
+                            <br>
+                          </ng-template>
+                        </a>
+                        to 
+                        <a (click)="openValidatorDetailDialog( tx.msg[i].value.validator_dst_address )"> 
+                          <span *ngIf="(appState | async).valsMap.size 
+                                        ? (appState | async).valsMap.has( tx.msg[i].value.validator_dst_address ) 
+                                        : false; else elseDstValidatorRedelegate">
+                            {{ (appState | async).valsMap.get( tx.msg[i].value.validator_dst_address )}}
+                          </span>
+                          <ng-template #elseDstValidatorRedelegate>
+                            <br>
+                            {{ tx.msg[i].value.validator_dst_address }}
+                          </ng-template>
+                        </a>    
+                        <br>
+                        <hr>                            
                       </span>
 
                       <span *ngIf="tx.msg[i].type === 'cosmos-sdk/MsgWithdrawValidatorCommission'">
-                        <a href="#">{{ tx.msg[i].value.validator_address }}</a><br>
-                          <mdb-badge default="true">withdrew</mdb-badge>&nbsp;
-                          commission                           
+                        <a (click)="openValidatorDetailDialog( tx.msg[i].value.validator_address )"> 
+                          <span *ngIf="(appState | async).valsMap.size 
+                                        ? (appState | async).valsMap.has( tx.msg[i].value.validator_address ) 
+                                        : false; else elseValidatorWithdrawCommission">
+                            {{ (appState | async).valsMap.get( tx.msg[i].value.validator_address )}}
+                          </span>
+                          <ng-template #elseValidatorWithdrawCommission>{{ tx.msg[i].value.validator_address }}</ng-template>
+                        </a>
+                        <br>
+                        <mdb-badge default="true">withdrew</mdb-badge>&nbsp;
+                        commission                           
                       </span>
+
+                      <span *ngIf="tx.msg[i].type === 'cosmos-sdk/MsgCreateValidator'">
+                        <a (click)="openTxsListDialog( tx.msg[i].value.delegator_address )"> 
+                          <span *ngIf="(appState | async).valsMap.size 
+                                        ? (appState | async).valsMap.has( tx.msg[i].value.delegator_address ) 
+                                        : false; else elseDelegatorCreate">
+                            {{ (appState | async).valsMap.get( tx.msg[i].value.delegator_address )}}
+                          </span>
+                          <ng-template #elseDelegatorCreate>{{ tx.msg[i].value.delegator_address }}</ng-template>
+                        </a>
+                        <br> 
+                        <mdb-badge default="true">created validator</mdb-badge>&nbsp;
+                        {{ tx.msg[i].value.description.moniker }}                           
+                      </span>   
                       
+                      <span *ngIf="tx.msg[i].type === 'cosmos-sdk/MsgVote'">
+                        <a (click)="openTxsListDialog( tx.msg[i].value.voter )"> 
+                          <span *ngIf="(appState | async).valsMap.size 
+                                        ? (appState | async).valsMap.has( tx.msg[i].value.voter ) 
+                                        : false; else elseVote">
+                            {{ (appState | async).valsMap.get( tx.msg[i].value.voter )}}
+                          </span>
+                          <ng-template #elseVote>{{ tx.msg[i].value.voter }}</ng-template>
+                        </a>
+                        <br> 
+                        <mdb-badge default="true">voted</mdb-badge>&nbsp;
+                        {{ tx.msg[i].value.option }} on prop.{{ tx.msg[i].value.proposal_id }}                           
+                      </span>        
                     </span>
                     <span *ngIf="tx.error">
-                      <mdb-badge danger="true">Error</mdb-badge>&nbsp;{{tx.error|titlecase}}
+                      <mdb-badge danger="true">Error</mdb-badge>&nbsp;{{ tx.error|titlecase }}
                     </span>
                   </mdb-card-text>
                   <button mdbBtn color="indigo" rounded="true" size="sm" mdbWavesEffect 
